<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="411dp"
        android:layout_height="374dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/siete"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/ocho"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/nueve"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/cuatro"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/cinco"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/seis"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/uno"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/dos"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/tres"
                android:textSize="18sp"
                android:onClick="mostrar" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/suma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/sumar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/cero"
                android:textSize="18sp" />

            <Button
                android:id="@+id/resta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/restar"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/multiplicar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/multiplicar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/igual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/igual"
                android:textSize="18sp" />

            <Button
                android:id="@+id/dividir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/dividir"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/valores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:onClick="Restaurar"
                android:text="@string/RestaurarValores"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="341dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:maxLength="10"
        android:text="0"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="577dp" />

    <TextView
        android:id="@+id/tv_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="578dp" />

    <TextView
        android:id="@+id/tv_signo"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:text="vacio"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="572dp" />

</androidx.constraintlayout.widget.ConstraintLayout>